<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>

    <string name="playButton">▶</string>
    <string name="number_five">5</string>
    <string name="no_posts">No posts</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error</string>
    <string name="sync_error_with_count">Sync error: %d not saved</string>

    <string name="new_posts_banner_text">New posts: %d</string>
    <string name="new_post_banner_text">New post</string>
    <string name="new_posts_banner" translatable="false">new_posts_banner</string>
    <string name="new_post_banner" translatable="false">new_post_banner</string>
    <string name="image_picker_error">image_picker_error</string>
    <string name="notification_permission_granted">notification_permission_granted</string>
    <string name="notification_permission_denied">notification_permission_denied</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    <!-- Дополнительные строки для push-уведомлений -->
    <string name="push_notification_title">Новое уведомление</string>
    <string name="push_notification_text">У вас новое уведомление</string>
    <string name="Retry">retry</string>
</resources>